# rusted-newton

./: Cargo.toml
src/: geometric_objects.rs  main.rs  particles_system.rs
