[package]
name = "rusted-newton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = {version = "0.22", features = ["serde"]}
sqlite = "0.34"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
